extend recipe request with pagination
